fix/add tests and add CollapsableForm

--- a/ui/src/variables.scss
+++ b/ui/src/variables.scss
@@ -4,3 +4,4 @@
 
 $primary-color: #1890ff;
 $link-hover-color: #40a9ff;
+$layout-body-background: #f0f2f5;
